--- a/.eslintrc
+++ b/.eslintrc
@@ -1,35 +1,48 @@
 {
-    "parser": "babel-eslint",
-    "extends": [
-        "eslint-config-standard",
-        "plugin:react/recommended"
+  "parser": "babel-eslint",
+  "extends": [
+    "eslint-config-standard",
+    "plugin:react/recommended"
+  ],
+  "env": {
+    "es6": true
+  },
+  "plugins": [
+    "react"
+  ],
+  "parserOptions": {
+    "sourceType": "module"
+  },
+  "rules": {
+    "space-before-function-paren": 0,
+    "react/jsx-boolean-value": 0,
+    "no-multiple-empty-lines": [
+      "error",
+      {
+        "max": 2
+      }
     ],
-    "env": {
-        "es6": true
-    },
-    "plugins": [
-        "react"
+    "comma-dangle": [
+      "error",
+      "only-multiline"
     ],
-    "parserOptions": {
-        "sourceType": "module"
-    },
-    "rules": {
-        // don't force es6 functions to include space before paren
-        "space-before-function-paren": 0,
-        // allow specifying true explicitly for boolean props
-        "react/jsx-boolean-value": 0,
-        "indent": ["error", 4, {"SwitchCase": 1}],
-        "react/jsx-indent": ["error", 4],
-        "no-multiple-empty-lines": ["error", {
-            "max": 2
-        }],
-        "comma-dangle": ["error", "only-multiline"],
-        "jsx-quotes": ["error", "prefer-double"],
-        "react/jsx-indent-props": ["error", 4]
-    },
-    "settings": {
-        "react": {
-            "version": "16.0"
-        }
+    "jsx-quotes": [
+      "error",
+      "prefer-double"
+    ],
+    "react/no-unescaped-entities": [
+      "error",
+      {
+        "forbid": [
+          ">",
+          "}"
+        ]
+      }
+    ]
+  },
+  "settings": {
+    "react": {
+      "version": "16.0"
     }
+  }
 }
