--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-octopus",
-  "version": "0.0.1",
+  "version": "1.0.0-beta.1",
   "description": "Develop your React applications quickly and easily!",
   "author": "expert-m",
   "license": "MIT",
@@ -54,11 +54,11 @@
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.0.0",
     "cross-env": "^5.2.0",
-    "eslint": "^5.6.1",
+    "eslint": "^5.10.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-config-standard-react": "^7.0.2",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^4.0.0",
@@ -67,17 +67,17 @@
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
     "react-router": "^4.3.1",
-    "react-router-config": "^1.0.0-beta.4",
-    "react-scripts": "^1.1.5",
+    "react-router-config": "^4.4.0-beta.6",
+    "react-scripts": "^2.1.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "rollup": "^0.66.2",
+    "rollup": "^0.68.0",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.1.8",
-    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
-    "rollup-plugin-url": "^1.4.0"
+    "rollup-plugin-url": "^2.1.0"
   },
   "files": [
     "dist"
